fix(DismissalCrewDto): 수정할 수 있는 리스트로 반환하도록 수정
- toList()는 변경할 수 없는 view(unmodifiableList)를 반환하기 때문에, 정렬을 위해서는 사용해선 안된다.